<resources>
    <string name="app_name">Hdtzsc</string>

    <string name="action_settings">Settings</string>

    <string-array name="tab_string_list" >
        <item >首页</item>
        <item >分类</item>
        <item >我的</item>
        <item >更多</item>
    </string-array>

    <string name="goods_list">商品列表</string>
    <string name="my_goods">我的商品</string>
    <string name="goods_detail">商品详情</string>

    <string name="clear_cache">删除缓存</string>
    <string name="check_update">检测更新</string>

    <string name="goods_price_htl">价格高到底</string>
    <string name="goods_price_lth">价格低到高</string>

    <!-- 错误提示-->
    <string name="error_username_too_short">用户名过短</string>
    <string name="error_password_too_short">密码过短</string>
    <string name="error_email_format">邮箱地址格式不正确</string>
    <string name="error_mobile_number_format">手机号码格式不正确</string>
    <string name="error_password_format">密码只能为"."、"_"、数字、字母</string>
    <string name="error_password_not_same">密码不一致</string>
    <string name="error_must_not_empty">不能为空</string>
    <string name="error_length">长度错误</string>
    <string name="upload_fail">上传失败</string>

    <!-- 成功提示-->
    <string name="upload_success">上传成功</string>
    <string name="register_success">注册成功</string>

    <!-- 运行提示-->
    <string name="registering">注册中</string>
    <string name="loading">加载中</string>
    <string name="logining">登录中</string>
    <string name="click_upload">点击上传</string>
    <string name="confirm_upload">确认上传</string>
    <string name="register_fail">注册失败</string>
    <string name="not_login">您还未登录！</string>

    <string name="empty_tips">没有找到结果哦~</string>
    <string name="request_fail">请求失败!</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <!-- 登录输入-->
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>

    <!-- 注册输入-->
    <string name="confirm_password">确认密码</string>
    <string name="input_mobile_phone_number">输入手机号码</string>
    <string name="input_email">输入邮箱地址</string>

    <!-- 上传商品-->
    <string name="update_goods">修改商品</string>
    <string name="shelve">上架</string>
    <string name="unshelve">下架</string>
    <string name="upload_goods">上传商品</string>
    <string name="goods_basic_info">商品基本信息</string>
    <string name="input_goods_name">输入商品名称</string>
    <string name="input_goods_price">输入商品价格</string>
    <string name="choose_goods_sort">选择商品分类</string>
    <string name="upload_goods_image">上传商品图片</string>

    <!-- 单位-->
    <string name="unit_yuan">元</string>

    <string name="contact_seller">联系卖家</string>
    <string name="back">返回</string>
    <string name="input_username">输入账号</string>
    <string name="input_password">输入密码</string>
</resources>
