<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg">

    <include layout="@layout/title_back" />

    <com.gc.materialdesign.views.ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/upload_goods_text_title"
                android:text="@string/goods_basic_info"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metGoodsName"
                style="@style/edit_text_upload_goods"
                app:met_minCharacters="1"
                app:met_maxCharacters="30"
                app:met_floatingLabelText="@string/input_goods_name"
                android:hint="@string/input_goods_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/metGoodsPrice"
                    style="@style/edit_text_upload_goods"
                    android:minLines="1"
                    android:maxLength="10"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    app:met_floatingLabelText="@string/input_goods_price"
                    android:hint="@string/input_goods_price"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/unit_yuan"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/upload_goods_text_title"
                android:text="@string/choose_goods_sort"/>

        </LinearLayout>
    </com.gc.materialdesign.views.ScrollView>



</LinearLayout>