<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="@dimen/more_user_image_w"
        android:layout_height="@dimen/more_user_image_h"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_user_default"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvUserName"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/ivUserImage"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/llActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:divider="@mipmap/ic_img_line_v"
        android:showDividers="middle"
        android:dividerPadding="16dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/register"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/login"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>