<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg">

    <include layout="@layout/title_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/vpGoodsImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <com.ogaclejapan.smarttablayout.SmartTabLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/stlGoodsImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    app:stl_customTabTextLayoutId="@layout/item_home_page_ad_indicator"
                    app:stl_dividerThickness="0dp"
                    app:stl_underlineThickness="0dp"
                    app:stl_indicatorColor="@color/tab_selected"
                    app:stl_defaultTabTextHorizontalPadding="0dp"
                    app:stl_indicatorThickness="@dimen/home_page_ad_indicator_dia"
                    app:stl_indicatorCornerRadius="@dimen/home_page_ad_indicator_rd"
                    android:layout_marginBottom="4dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvGoodsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGoodsPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/cpb_red"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMobilePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tvDial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawableRight="@mipmap/ic_bohao"
                    android:drawablePadding="3dp"
                    android:textColor="@color/app_theme"
                    android:text="@string/contact_seller"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#8f000000">

        <Button
            android:id="@+id/btnEditGoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_btn"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/update_goods"/>

        <Button
            android:id="@+id/btnShelve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_btn"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/shelve"/>
    </LinearLayout>
</LinearLayout>